new analytics ID

--- a/public/ko/p/how-to-install-host-ghost-with-cloudflare-argo-tunnel/index.html
+++ b/public/ko/p/how-to-install-host-ghost-with-cloudflare-argo-tunnel/index.html
@@ -15,19 +15,20 @@
 <meta name="twitter:description" content="A guide to teach you how to run Ghost and Cloudflare Argo Tunnel"><meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content='https://aerland.xyz/ko/p/how-to-install-host-ghost-with-cloudflare-argo-tunnel/cloudflared-ghost.png' />
 <link rel="shortcut icon" href="/favicon.png" />
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMDYGPZL6S"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-YMDYGPZL6S', { 'anonymize_ip': false });
-}
-</script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7891761786816782"
   crossorigin="anonymous"></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2RN5CWJTF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2RN5CWJTF');
+</script>
 <meta name="keywords" content="guide, self-hosted, linux, cms" />
 
 
