--- a/public/ko/search/index.html
+++ b/public/ko/search/index.html
@@ -14,19 +14,20 @@
     <meta name="twitter:creator" content="@aerglonus"><meta name="twitter:title" content="Search">
 <meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://aerland.xyz/ko/search/index.json">
 <link rel="shortcut icon" href="/favicon.png" />
-
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YMDYGPZL6S"></script>
-<script>
-var doNotTrack = false;
-if (!doNotTrack) {
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-	gtag('config', 'G-YMDYGPZL6S', { 'anonymize_ip': false });
-}
-</script>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7891761786816782"
   crossorigin="anonymous"></script>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B2RN5CWJTF"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+
+  function gtag() {
+    dataLayer.push(arguments);
+  }
+  gtag('js', new Date());
+
+  gtag('config', 'G-B2RN5CWJTF');
+</script>
 <meta name="keywords" content="" />
 
 
