fixed issue of doble rendering content

--- a/public/ko/p/obs-split-audio-guide/index.html
+++ b/public/ko/p/obs-split-audio-guide/index.html
@@ -516,6 +516,7 @@ if (!doNotTrack) {
 <p><strong>IMPORTANT !! : SINCE OBS IS CREATING AUDIO TOO BECAUSE YOU HAVE CLIPS/ALERTS AND SUCH THINGS AS BROWSER SOURCE INSIDE OBS YOU SHOULD ADD OBS ITSELF AS AN AUDIO SOURCE SO VIEWERS GET TO HEAR THEM ON STREAM</strong></p>
 </blockquote>
 <p>If the program you want to add doesn&rsquo;t show up in the <strong>Session</strong> menu and you have to manually add it but you dont know whats the name of the executable you can get it in the <code>task manager</code> in the <code>details</code> tab. (<code>Open it by pressing Windows key + type taksmngr</code> and it should be the first option) there you can see all the programs executable names. (ex: <code>chrome.exe</code>). Most of the time the executable is <code>programname.exe</code> but sometimes its different.(ex: for Apex Legends is <code>r5apex.exe</code>).</p>
+<!-- raw HTML omitted -->
 <p><strong>NOTE - League of Legends:</strong></p>
 <p>For league you have to add two sources <code>LeagueClientUxRender.exe</code> and <code>League of Legends.exe</code> the first one is for the <strong>league client</strong> audio and the second one is for when youre inside the game audio. Both should automatically appear in the session menu when you open the client and when you get in a game. (you can set up the second by going into a custom game/practice tool).</p>
 <h2 id="telling-twitch-which-applications-audio-you-want-to-get-saved-in-the-vod-audio"><strong>Telling Twitch which applications audio you want to get saved in the VOD audio:</strong></h2>
@@ -653,180 +654,6 @@ if (!doNotTrack) {
         </div>
     </div>
 </aside>
-
-    <h2 id="what-you-need"><strong>What you need:</strong></h2>
-<p>1 - OBS studio</p>
-<p>2 - win-capture-audio, this is the program you need to split the audio. You can download it here :</p>
-<blockquote>
-<p><a class="link" href="https://github.com/bozbez/win-capture-audio/releases/download/v2.2.2-beta/win-capture-audio-2.2.2-beta-setup.exe"  target="_blank" rel="noopener"
-    >https://github.com/bozbez/win-capture-audio/releases/download/v2.2.2-beta/win-capture-audio-2.2.2-beta-setup.exe</a></p>
-</blockquote>
-<h2 id="installation-and-usage">Installation and Usage</h2>
-<p>Once you downloaded the program run the installer (make sure OBS is not open) it&rsquo;s a fast installation once it finish you can launch OBS now if you add a new source there should be a new option called <code>Application Audio Output Capture</code></p>
-<p><img src="/ko/p/obs-split-audio-guide/image1.png"
-	width="459"
-	height="361"
-	srcset="/ko/p/obs-split-audio-guide/image1_hu9ffb34005aabd20126d4a4472a1323ba_19594_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image1_hu9ffb34005aabd20126d4a4472a1323ba_19594_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-		alt="Image 1 "
-	
-	
-		class="gallery-image" 
-		data-flex-grow="127"
-		data-flex-basis="305px"
-	
-></p>
-<h2 id="adding-the-audio-sources">Adding the audio sources:</h2>
-<blockquote>
-<p>Since you can add multiple programs to the same source I recommend creating a source specially for each type of group for example did it like this:</p>
-<p><img src="/ko/p/obs-split-audio-guide/image2.png"
-	width="391"
-	height="64"
-	srcset="/ko/p/obs-split-audio-guide/image2_huf3ae6b003c27ff49d290ae0dd35f39a0_3031_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image2_huf3ae6b003c27ff49d290ae0dd35f39a0_3031_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-		alt="Image 2"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="610"
-		data-flex-basis="1466px"
-	
-></p>
-<p>The <code>Music - Audio</code> group it&rsquo;s a must since here is where you&rsquo;re going to add the programs that bring music to the stream like <strong>Spotify</strong> or <strong>Google chrome(nightbot/youtube)</strong> and its gonna allow to separate it from the VOD audio track.</p>
-<p>Also to avoid having to add each audio source to different scenes a good trick is creating a new scene and there add all the audio sources groups you&rsquo;re gonna use and once you are done with setting up everything all you have to do is add that scene as a source in the multiple scenes that you use so every time you add a new group of audio sources it automatically adds them to the mixer of each scene.</p>
-</blockquote>
-<p><img src="/ko/p/obs-split-audio-guide/image3.png"
-	width="789"
-	height="391"
-	srcset="/ko/p/obs-split-audio-guide/image3_hub1c2d9378c425ad6ca4960d0f4ae8131_13240_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image3_hub1c2d9378c425ad6ca4960d0f4ae8131_13240_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-		alt="Scene exclusively to audio sources:"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="201"
-		data-flex-basis="484px"
-	
-></p>
-<blockquote>
-</blockquote>
-<p><img src="/ko/p/obs-split-audio-guide/image4.png"
-	width="791"
-	height="392"
-	srcset="/ko/p/obs-split-audio-guide/image4_hu1ee4fb4b48fde016db86cf8494890e38_27524_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image4_hu1ee4fb4b48fde016db86cf8494890e38_27524_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-		alt="currently in Gaming scene with the Audio scene as a source:"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="201"
-		data-flex-basis="484px"
-	
-></p>
-<h3 id="add-your-programs"><strong>Add your programs:</strong></h3>
-<p>Here you have to ways to add programs/games.</p>
-<ol>
-<li><strong>Add from currently active sessions menu</strong>: In this menu it should give you a list with the most common program. (ex: Discord, Spotify) and some others that the plugin might detect. Once you selected the program just click in the <code>Add Executable</code>. You can add multiple programs as a group to the same audio source.</li>
-</ol>
-<p><img src="/ko/p/obs-split-audio-guide/image5.png"
-	width="722"
-	height="612"
-	srcset="/ko/p/obs-split-audio-guide/image5_hu55ae41cbdc8431eb5ea5d6c34f85c1f0_17686_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image5_hu55ae41cbdc8431eb5ea5d6c34f85c1f0_17686_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="117"
-		data-flex-basis="283px"
-	
-></p>
-<ol start="2">
-<li><strong>Using the <code>+</code> next to the executables area:</strong> If the program you want to add to a certain group of sources doesn&rsquo;t show up in the <code>Session</code> menu you might wanna added the program executable manually. For example if you want to add <strong>Google Chrome</strong> and it doesn&rsquo;t show up in the list you add it by clicking in the <code>+</code> button and type <code>chrome.exe</code> and press <strong>ok</strong> and it should be added to the <strong>Executables</strong> area.</li>
-</ol>
-<p><img src="/ko/p/obs-split-audio-guide/image6.png"
-	width="722"
-	height="612"
-	srcset="/ko/p/obs-split-audio-guide/image6_hu007f60a4768f6e25a53127fa6f3afc6b_23688_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image6_hu007f60a4768f6e25a53127fa6f3afc6b_23688_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="117"
-		data-flex-basis="283px"
-	
-></p>
-<blockquote>
-<p><strong>IMPORTANT !! : SINCE OBS IS CREATING AUDIO TOO BECAUSE YOU HAVE CLIPS/ALERTS AND SUCH THINGS AS BROWSER SOURCE INSIDE OBS YOU SHOULD ADD OBS ITSELF AS AN AUDIO SOURCE SO VIEWERS GET TO HEAR THEM ON STREAM</strong></p>
-</blockquote>
-<p>If the program you want to add doesn&rsquo;t show up in the <strong>Session</strong> menu and you have to manually add it but you dont know whats the name of the executable you can get it in the <code>task manager</code> in the <code>details</code> tab. (<code>Open it by pressing Windows key + type taksmngr</code> and it should be the first option) there you can see all the programs executable names. (ex: <code>chrome.exe</code>). Most of the time the executable is <code>programname.exe</code> but sometimes its different.(ex: for Apex Legends is <code>r5apex.exe</code>).</p>
-<p><strong>NOTE - League of Legends:</strong></p>
-<p>For league you have to add two sources <code>LeagueClientUxRender.exe</code> and <code>League of Legends.exe</code> the first one is for the <strong>league client</strong> audio and the second one is for when youre inside the game audio. Both should automatically appear in the session menu when you open the client and when you get in a game. (you can set up the second by going into a custom game/practice tool).</p>
-<h2 id="telling-twitch-which-applications-audio-you-want-to-get-saved-in-the-vod-audio"><strong>Telling Twitch which applications audio you want to get saved in the VOD audio:</strong></h2>
-<p>Inside OBS settings you want to change the <code>Output mode</code> from <strong>simple</strong> to <strong>advanced</strong> once you do this you should see the <code>Twitch VOD Track</code> option under the <code>Audio Track</code> select the checkbox and by default it has the track <code>2</code> you can leave it as it is or change it, up to you. Just keep in mind that it should not be the same as the <code>Audio Track</code>.</p>
-<p><img src="/ko/p/obs-split-audio-guide/image7.png"
-	width="983"
-	height="758"
-	srcset="/ko/p/obs-split-audio-guide/image7_hu4ddd70b6cae4dcbd5cded0aea2e91f65_39581_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image7_hu4ddd70b6cae4dcbd5cded0aea2e91f65_39581_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="129"
-		data-flex-basis="311px"
-	
-></p>
-<h2 id="disabling-audio-track-">Disabling audio track :</h2>
-<p>Once you have the option enabled and all your audio sources added the next step disabling the track <code>2</code> to the sources that you don&rsquo;t want to be saved in the VOD.</p>
-<blockquote>
-<p>Remember the <code>Music - Audio</code> source we created before here it&rsquo;s why we need it to be like that.</p>
-</blockquote>
-<p>For this you click in the cog wheel of any audio source and go to <code>Advanced Audio Properties</code>.</p>
-<p><img src="/ko/p/obs-split-audio-guide/image8.png"
-	width="324"
-	height="399"
-	srcset="/ko/p/obs-split-audio-guide/image8_hucf5a3dcc339646b31f145536220f25a1_12819_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image8_hucf5a3dcc339646b31f145536220f25a1_12819_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="81"
-		data-flex-basis="194px"
-	
-></p>
-<p>Then a new window should pop-up and it should show you all the audio sources and their <code>audio tracks</code></p>
-<p><img src="/ko/p/obs-split-audio-guide/image9.png"
-	width="1102"
-	height="372"
-	srcset="/ko/p/obs-split-audio-guide/image9_hu91299b08cf1f9234921188f17a53d789_28416_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image9_hu91299b08cf1f9234921188f17a53d789_28416_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="296"
-		data-flex-basis="710px"
-	
-></p>
-<p>See how we have multiple numbers and check boxes in <code>Tracks</code>. Remember that by default <code>Twitch VOD Track</code> that is selected in Settings is the track <code>2</code>, since we don&rsquo;t want Twitch to save our<code>Music - Audio</code> in the VOD what we do is we uncheck the track <code>2</code> from <code>Music - Audio</code> or any other audio source you want to exclude from the VOD.</p>
-<p><img src="/ko/p/obs-split-audio-guide/image10.png"
-	width="1102"
-	height="372"
-	srcset="/ko/p/obs-split-audio-guide/image10_huc12bd4d2bb6c8a04536b62e75df21a15_28817_480x0_resize_box_3.png 480w, /ko/p/obs-split-audio-guide/image10_huc12bd4d2bb6c8a04536b62e75df21a15_28817_1024x0_resize_box_3.png 1024w"
-	loading="lazy"
-	
-	
-		class="gallery-image" 
-		data-flex-grow="296"
-		data-flex-basis="710px"
-	
-></p>
-<blockquote>
-<p>Note: Only uncheck the track that you selected as your twitch vod track because if you uncheck any other track not only it wont get recorded in the VOD, viewers won&rsquo;t be able to listen to that source on stream.</p>
-</blockquote>
-<p>Now from now on your vods should not record any music source.</p>
 
     
         
